--- a/common.css
+++ b/common.css
@@ -1,11 +1,20 @@
-html {
-
+@charset "utf-8";
 @import url(https://fonts.googleapis.com/css?family=Maven+Pro);
 
+html,body{width:100%;height:100%;margin-top:100px;}
+
+body {
+  background: #efefef;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 body {
 
-font-family: 'Maven Pro', sans-serif;
+
 
 }
