--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
 
 	{% if page.url == '/index.html' or page.url == '/' %}
 		{% assign link = '/about' %}
-		{% assign prompt = 'About the Author' %}
+		{% assign prompt = 'About SoYoung Park' %}
 	{% else %}
 		{% assign link = '/' %}
 		{% assign prompt = 'Back to Home' %}
 	{% endif %}
 
 	<a href="{{ link | prepend: site.baseurl }}">
-		<img src="http://www.gravatar.com/avatar/{{ site.author_gravatar }}.png?s=80" class="gravatar">
+		<img src="./assets/unithon.jpg" class="gravatar">
 	</a>
 	<span class="logo-prompt">{{ prompt }}</span>
 
