--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div class="footer">
-  Made with Jekyll, <span class="block">&lt;/&gt; <a href="http://github.com/heiswayi/the-plain" title="a minimalist Jekyll theme for personal blog">The Plain theme</a>.</span>
+  Made with Jekyll, <span ><a href="http://github.com/heiswayi/the-plain" title="a minimalist Jekyll theme for personal blog">The Plain theme</a>.</span>
   <span class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author_name }}</span>
 </div>
