--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-<div class="footer">
-  Jekyll - <span ><a href="http://github.com/heiswayi/the-plain" title="a minimalist Jekyll theme for personal blog">The Plain theme</a>.</span>
-  <span class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author_name }}</span>
-</div>
+<footer class="footer-main">
+    {{ site.name }} © {{ site.time | date: '%Y' }} <a class="link" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
+
+    <p class="extra">
+        <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a> by <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
+    </p>
+</footer>
