--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,17 +1,8 @@
 ---
 layout: default
 ---
+{% include header.html %}
 
-<article>
+{{content}}
 
-	<h1 class="title">{{ page.title }}</h1>
-
-	<div class="divider"></div>
-
-	{{ content }}
-
-</article>
-
-<div class="page-navigation">
-	<a class="home" href="{{site.baseurl}}/" title="Back to Main">Home</a>
-</div>
+{% include footer.html %}
