--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@ layout: compress
     <meta name=description content="{{ site.bio }}">
     <meta name=author content="{{ site.name }}">
 
+    <title>SoYoung Park</title>
+
     {% seo %}
     
     {% include favicon.html %}
