--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,12 @@
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
-        {% if page.title != "Home" %}
-            <li class="item">
-                <a class="link" href="{{ site.url }}/">Home</a>
-            </li>
+
+        {% if site.about == true %}
+            {% if page.title != "About" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/about">About</a>
+                </li>
+            {% endif %}
         {% endif %}
 
         {% if site.blog == true %}
@@ -22,10 +25,10 @@
             {% endif %}
         {% endif %}
 
-        {% if site.about == true %}
-            {% if page.title != "About" %}
+        {% if site.projects == true %}
+            {% if page.title != "Projects" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/about">About</a>
+                    <a class="link" href="{{ site.url }}/art">Art</a>
                 </li>
             {% endif %}
         {% endif %}
