--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,10 @@
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
+        {% if page.title != "Home" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/">Home</a>
+            </li>
+        {% endif %}
 
         {% if site.about == true %}
             {% if page.title != "About" %}
