--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-color:black;">
+<html lang="en" style="background-color:url('assets/images/giphy.gif'); background-size:100%; background-repeat: repeat-y;">
 {% else %}
 <html lang="en">
 {% endif %}
