black background only for landing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,14 @@
             </span>
         {% endif %}
 
+        {% if page.title == "Home" %}
         <h1 class="title">{{ site.name }}</h1>
+        {% else %}
+        <h1 class="title" style="color:#ececec">{{ site.name }}</h1>
+        {% endif %}
         <h2 class="description">{{ site.bio }}</h2>
+
+
 
         {% include social-links.html %}
     </header>
