--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-image:url('assets/images/timelapse.gif'); background-size:100% auto; background-repeat: repeat-y;">
+<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size:cover; background-repeat: repeat-y;">
 {% else %}
 <html lang="en">
 {% endif %}
