--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size:cover; background-repeat: repeat-y;">
+<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size: 120%; background-repeat: repeat-y; background-position-x: 34%; background-position-y: 50%">
 {% else %}
 <html lang="en">
 {% endif %}
