--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -4,6 +4,10 @@
     text-align: center
     position: relative
     z-index: 99
+    background-color: rgba(0, 0, 0, 0.47);
+    padding: 2rem;
+    padding-top: 5rem;
+    border-radius: 1%;
 
     > .link > .selfie
         width: 125px
@@ -22,7 +26,7 @@
         margin: 0 0 13px
 
     > .description
-        font-size: 1.85rem
+        font-size: 2.05rem
         font-weight: 300
         font-style: normal
         color: $gama
