--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -4,10 +4,10 @@
     text-align: center
     position: relative
     z-index: 99
-    background-color: rgba(0, 0, 0, 0.47);
-    padding: 2rem;
-    padding-top: 5rem;
-    border-radius: 1%;
+    background-color: rgba(0, 0, 0, 0.47)
+    padding: 2rem
+    padding-top: 5rem
+    border-radius: 1%
 
     > .link > .selfie
         width: 125px
