--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -35,7 +35,8 @@
         padding: 0
 
         > .item > .link
-            font-size: 2rem
+            color: #fff
+            font-size: 2.2rem
             padding: 7px 15px
             margin: 0
             border-radius: 4%
@@ -43,4 +44,4 @@
             width: 70px
 
             &:hover
-                color: $alpha
+                color: #ff3443
