front end changes

--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -11,7 +11,7 @@
 
         &:hover
             > .icon
-                fill: $delta
+                fill: #ff3443
 
         &:hover:before
             opacity: 1
