--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size: 120%; background-repeat: no-repeat; background-position-x: 34%; background-position-y: -24vw; background-color: black;">
+<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size: 120%; background-repeat: no-repeat; background-position: center; background-color: black; background-attachment: fixed;">
 {% else %}
 <html lang="en">
 {% endif %}
