front end changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size: 120%; background-repeat: no-repeat; background-position: center; background-color: black; background-attachment: fixed;">
+<html lang="en" style="background-image:url('assets/images/pixels.gif'); background-size: 120%; background-repeat: no-repeat; background-position: center; background-color: rgba(0, 0, 0, 0.46); background-attachment: fixed; background-blend-mode: color;">
 {% else %}
 <html lang="en">
 {% endif %}
