footer letter color

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -2,7 +2,7 @@ $fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
-$beta: #222
+$beta: #ededed
 $gama: #ededed
 $delta: #37ccc6
 $epsilon: #ededed
