experimenting with emoji favicon

--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,4 +1,4 @@
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-57x57.png" />
+<!-- <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-114x114.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-144x144.png" />
@@ -10,7 +10,8 @@
 <link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon/favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon/favicon-128.png" sizes="128x128" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/favicon/favicon-128.png" sizes="128x128" /> -->
+<link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/279/laptop_1f4bb.png">
 <meta name="application-name" content="&nbsp;"/>
 <meta name="msapplication-TileColor" content="#FFFFFF" />
 <meta name="msapplication-TileImage" content="mstile-144x144.png" />
