--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,8 +1,8 @@
 $fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
-$alpha: #666
-$beta: #ededed
+$alpha: black
+$beta: black
 $gama: #ededed
 $delta: #37ccc6
 $epsilon: #ededed
