--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 <!DOCTYPE html>
 {% if page.title == "Home" %}
-<html lang="en" style="background-size: 120%; background-repeat: no-repeat; background-position: center; background-color: rgba(87, 87, 87, 0.45); background-attachment: fixed; background-blend-mode: color;">
+<html lang="en" style="background-size: 120%; background-repeat: no-repeat; background-position: center; background-color: white; background-attachment: fixed; background-blend-mode: color;">
 {% else %}
 <html lang="en">
 {% endif %}
