--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -3,7 +3,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: black
 $beta: black
-$gama: #ededed
+$gama: black
 $delta: #37ccc6
 $epsilon: #ededed
 
