--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -4,7 +4,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 $alpha: black
 $beta: black
 $gama: black
-$delta: #37ccc6
+$delta: black
 $epsilon: #ededed
 
 $mobile: "only screen and (max-width: 400px)"
