--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -2,7 +2,7 @@ $fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: black
-$beta: black
+$beta: #ededed
 $gama: black
 $delta: black
 $epsilon: #ededed
