--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -3,7 +3,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: black
 $beta: #ededed
-$gama: black
+$gama: #ededed
 $delta: black
 $epsilon: #ededed
 
