--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -6,6 +6,7 @@ $beta: #ededed
 $gama: #ededed
 $delta: black
 $epsilon: #ededed
+$black: black
 
 $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
