--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -8,14 +8,14 @@ body
 
 h1, h2, h3, h4
 	font-family: $fontSans
-	color: $beta
+	color: $black
 	-webkit-font-smoothing: antialiased
 	text-rendering: optimizeLegibility
 
 h1
 	font-size: 7rem
 	letter-spacing: -1px
-	color: $beta
+	color: $black
 	font-weight: 100
 
 h2
@@ -28,7 +28,7 @@ h4
 	font-size: 1.6rem
 
 a
-	color: $delta
+	color: $black
 	text-decoration: underline
 
 p
