--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         {% if page.title == "Home" %}
-        <h1 class="title" style="color:#ececec">{{ site.name }}</h1>
+        <h1 class="title">{{ site.name }}</h1>
         {% else %}
         <h1 class="title">{{ site.name }}</h1>
         {% endif %}
