--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -29,7 +29,7 @@
         font-size: 2.05rem
         font-weight: 300
         font-style: normal
-        color: #ececec
+        color: $black
         width: 70%
         margin: 0 auto 30px
 
