--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -35,7 +35,7 @@
         padding: 0
 
         > .item > .link
-            color: #fff
+            color: $black
             font-size: 2.2rem
             padding: 7px 15px
             margin: 0
@@ -44,4 +44,4 @@
             width: 70px
 
             &:hover
-                color: #ffc467
+                color: #b1b1b1
