--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -11,7 +11,7 @@
 
         &:hover
             > .icon
-                fill: #ffc467
+                fill: #b1b1b1
 
         &:hover:before
             opacity: 1
@@ -29,7 +29,7 @@
             font-size: 13px
             padding: 3px 10px
             background: $beta
-            color: black
+            color: $black
             border-radius: 2px
             height: 22px
             line-height: 22px
