--- a/_sass/components/footer.sass
+++ b/_sass/components/footer.sass
@@ -27,7 +27,7 @@
 
         > .icon
             width: 15px !important
-            fill: $black !important
+            fill: $gama !important
             transition: ease-in-out all .3s
             position: relative
             top: 3px
