--- a/_sass/components/share.sass
+++ b/_sass/components/share.sass
@@ -63,7 +63,7 @@
     // don't know why - sorry
     // take this insted: youtube.com/watch?v=59Zcx9YbZxI
     svg
-        fill: #fff
+        fill: $black//#fff
         position: relative
         top: 3px
         margin: 0
