--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -15,7 +15,7 @@
     display: inline-block
     width: 17px
     height: 17px
-    fill: #fff
+    fill: $black//#fff
     text-align: center
     color: #000
     margin: 7px auto
