--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -15,9 +15,9 @@
     display: inline-block
     width: 17px
     height: 17px
-    fill: $black//#fff
+    fill: $black
     text-align: center
-    color: #000
+    color: #black
     margin: 7px auto
 
 .caption
