--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,8 +1,9 @@
 $fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
-$alpha: black
-$beta: #ededed
+
+$alpha: #000000
+$beta: #000000
 $gama: #ededed
 $delta: black
 $epsilon: #ededed
