--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -6,7 +6,7 @@ $alpha: #000000
 $beta: #000000
 $gama: #ededed
 $delta: black
-$epsilon: #ededed
+$epsilon: #a7a7a7
 $black: black
 
 $mobile: "only screen and (max-width: 400px)"
