--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -4,9 +4,9 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #000000
 $beta: #000000
-$gama: #ededed
+$gama: #a7a7a7
 $delta: black
-$epsilon: #a7a7a7
+$epsilon: #ededed
 $black: black
 
 $mobile: "only screen and (max-width: 400px)"
