--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -29,7 +29,7 @@
             font-size: 13px
             padding: 3px 10px
             background: $beta
-            color: $gama
+            color: $epsilon
             border-radius: 2px
             height: 22px
             line-height: 22px
